Made the full width plots work correctly!

--- a/docs/index.rmd
+++ b/docs/index.rmd
@@ -1,5 +1,5 @@
 ---
-title: "Testing"
+title: "Testing Tuftesque2"
 author: "Nick Strayer"
 date: "4/23/2019"
 output:
@@ -14,11 +14,19 @@ knitr::knit_hooks$set(class = function(before, options, envir) {
     "</div>"
   }
 })
+# install.packages("ggthemes")
+library(ggthemes)
 ```
 
 ## Hi there!
 
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+[You can add side notes to highlight important details]{.side-note}
+It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+
+
+
+Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
 
 ::::: {.side-note}
 
@@ -33,21 +41,16 @@ tibble::tibble( x = rnorm(200) ) %>%
 ```
 ::::: 
 
-Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-Another thoughtful quote
-
+## Of course code chunks work properly...
 
 ```{r}
-x <- 5
-y <- 4
-z <- x^2 + y
-z
+6 + 5
 ```
 
 
+### That's really a bare-minimum though...
 
-[A basic side-note is supah easy as well]{.side-note}
+There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
 
 
 ## Basic plots work pretty well
@@ -59,16 +62,26 @@ tibble::tibble( x = rpois(200, 40) ) %>%
 ```
 
 
-### This is nice! 
 
-There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
 
 
 ## What about a full width plot, though?
 
-```{r, echo=FALSE, class='full-width-plot', fig.height = 2, fig.width=5}
-tibble::tibble( x = rpois(200, 40) ) %>% 
-  ggplot(aes(x = x)) + 
-  geom_histogram(bins = 100)
+```{r, echo=FALSE, class='full-width-plot', fig.height = 5, fig.width=15}
+tibble::tibble(
+  id = rep(1:10, each = 15) %>% as.character(),
+  starting_point = rep(runif(10, min = -4, max = 4), each = 15),
+  time = rep(1:15, times = 10),
+  value = rnorm(15*10) + starting_point
+) %>% 
+  ggplot(aes(x = time, y = value, color = id)) + 
+  geom_line(size = 0.5) +
+  theme_minimal() +
+  labs(x = '', y = '') +
+  guides(color = FALSE) +
+  theme_wsj()
 ```
 
+## I guess that's good... 
+
+More to come!
