Made it so there is a max width that the content plus sidenote and also made the general structure of the css a bit simpler in the process (I think).

--- a/docs/index.rmd
+++ b/docs/index.rmd
@@ -6,6 +6,12 @@ output:
   tuftesque2::tuftesque
 ---
 
+```{r setup, echo = FALSE}
+
+# knitr::opts_chunk$set(eval = FALSE)
+
+```
+
 
 ## Hi there, again!!
 
